<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClimateApp</string>
    <string name="action_settings">Settings</string>
    <string name="city_label">City</string>
    <string name="ok_button">OK</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="temperature_label">Temperature</string>
    <string name="humidity_label">Humidity</string>
    <string name="done_button">Done</string>
    <string name="country_label">Country</string>
    <string name="last_updated">Last Updated</string>
    <string name="exit_label">Exit</string>

</resources>
